# goobers

./: Cargo.toml  cache.db
goobers/apple-src/: Info.plist
goobers/goobers.xcodeproj/: project.pbxproj
goobers/goobers.xcodeproj/project.xcworkspace/xcuserdata/ellamae.xcuserdatad/: UserInterfaceState.xcuserstate
goobers/goobers.xcodeproj/xcshareddata/xcschemes/: goobers.xcscheme
goobers/goobers.xcodeproj/xcuserdata/ellamae.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: classes.rs  layout.rs  lib.rs  main.rs  pages.rs  stories.rs  theme.rs  utils.rs
src/components/: avatar.rs  button.rs  checkbox.rs  keypad.rs  language.rs  messages.rs  mod.rs  radio.rs  text.rs
src/interface/: general.rs  navigation.rs
src/pages/: definition.rs  new_word.rs  small_story.rs  word_order.rs
src/stories/: cinderella.rs
