[package]
name = "goobers"
version = "0.1.0"
edition = "2024"
description = "contact book built off chk and RAMP"
license = "BSD-3-Clause"
repository = "https://github.com/EllaCouch20/goobers.git"
authors = ["Ella Couch <ella@orange.me>"]

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "js"] }
hex = "0.4.3"
include_dir = "0.7.4"
chrono = "0.4.42"
quircs = "0.10.3"
qrcode = "0.14.1"
imageproc = "0.25.0"
image = "0.25.9"
nsvg = "0.5.1"
#ptsd = {version="0.1.1", package = "ptsd2"}
ptsd = {path="../ptsd", package = "ptsd2"}
#prism = {version="0.1.3", package = "prism2"}
prism = {package = 'prism2', path = "../prism"}
#ramp = {package = 'ramp2', version = "0.1.3"}
ramp = {package = 'ramp2', path = "../ramp"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "time", "net"] }

[lib]
name="goobers"
crate-type=["staticlib", "cdylib", "rlib"]
#crate-type=["cdylib"]

####################
# cargo apk config #
####################


[package.metadata.android]
package = "com.orange.pkg"
build_targets = [ "aarch64-linux-android" ]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.sdk]
min_sdk_version = 33
target_sdk_version = 33

label = "Application Name"

[package.metadata.deb]
maintainer-scripts = "debian/"
